--- a/FakeSmtp.Data.Test/FakeSmtp.Data.Test.csproj
+++ b/FakeSmtp.Data.Test/FakeSmtp.Data.Test.csproj
@@ -4,11 +4,11 @@
 	<PropertyGroup>
 		<Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
 		<Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-		<ProjectGuid>1b693cb4-99ad-4509-a1f0-9743b074586f</ProjectGuid>
+		<ProjectGuid>aefc4dd0-ecb6-4395-ac58-ee7ba9ab7286</ProjectGuid>
 		<OutputType>Library</OutputType>
 		<AppDesignerFolder>Properties</AppDesignerFolder>
-		<RootNamespace>ClassLibrary1</RootNamespace>
-		<AssemblyName>ClassLibrary1</AssemblyName>
+		<RootNamespace>FakeSmtp.Data.Test</RootNamespace>
+		<AssemblyName>FakeSmtp.Data.Test</AssemblyName>
 		<TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
 		<FileAlignment>512</FileAlignment>
 	</PropertyGroup>
