--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
-  <repository path="..\ClassLibrary1\packages.config" />
+  <repository path="..\FakeSmtp.Data.Test\packages.config" />
   <repository path="..\FakeSmtp\packages.config" />
 </repositories>
