--- a/FakeSmtp.Data.Test/FakeSmtp.Data.Test.csproj
+++ b/FakeSmtp.Data.Test/FakeSmtp.Data.Test.csproj
@@ -48,6 +48,12 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\FakeSmtp\FakeSmtp.csproj">
+      <Project>{ad2559b8-adc4-4b86-8d66-9993841731fc}</Project>
+      <Name>FakeSmtp</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
