--- a/FakeSmtp/App.config
+++ b/FakeSmtp/App.config
@@ -2,5 +2,7 @@
 <configuration>
   <appSettings>
     <add key="receptionPort" value="25" />
+    <add key="hostAdress" value="127.0.0.1" />
+    <add key="destinationPort" value="85" />
   </appSettings>
 </configuration>
