--- a/FakeSmtp/App.config
+++ b/FakeSmtp/App.config
@@ -1,8 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
   <appSettings>
+    <add key="hostAdressReception" value="10.8.110.127" />
     <add key="receptionPort" value="25" />
-    <add key="hostAdress" value="127.0.0.1" />
-    <add key="destinationPort" value="85" />
+    <add key="hostAdressDestination" value="173.194.34.53" />
+    <add key="destinationPort" value="25" />
   </appSettings>
 </configuration>
