--- a/SMTPSupport.Test/SMTPSupport.Test.csproj
+++ b/SMTPSupport.Test/SMTPSupport.Test.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{F86B3FBE-67F4-43FB-B58A-2E86662A7C94}</ProjectGuid>
+    <ProjectGuid>{5ED5D24A-FA7E-4308-A3E2-3ACCAA7FA42C}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>SMPTPSupport</RootNamespace>
-    <AssemblyName>SMPTPSupport</AssemblyName>
+    <RootNamespace>SMTPSupport.Test</RootNamespace>
+    <AssemblyName>SMTPSupport.Test</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -39,17 +39,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="EHLOCommand.cs" />
-    <Compile Include="EHLOCommandToExecute.cs" />
-    <Compile Include="RCPTCommandToExecute.cs" />
-    <Compile Include="SMTPCallingClient.cs" />
-    <Compile Include="SMTPCommand.cs" />
+    <Compile Include="SMTPSupportTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RCPTCommand.cs" />
-    <Compile Include="SMTPCommandParseResult.cs" />
-    <Compile Include="SMTPCommandToExecute.cs" />
-    <Compile Include="SMTPParser.cs" />
-    <Compile Include="SMTPSession.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
