--- a/FakeSmtp/App.config
+++ b/FakeSmtp/App.config
@@ -1,9 +1,9 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0"?>
 <configuration>
   <appSettings>
-    <add key="hostAdressReception" value="127.0.0.1" />
-    <add key="receptionPort" value="25" />
-    <add key="hostAdressDestination" value="127.0.0.1" />
-    <add key="destinationPort" value="85" />
+    <add key="hostAdressReception" value="127.0.0.1"/>
+    <add key="receptionPort" value="25"/>
+    <add key="hostAdressDestination" value="127.0.0.1"/>
+    <add key="destinationPort" value="85"/>
   </appSettings>
-</configuration>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5"/></startup></configuration>
