--- a/SMTPSupport/SMTPSupport.csproj
+++ b/SMTPSupport/SMTPSupport.csproj
@@ -8,7 +8,7 @@
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>SMTPSupport</RootNamespace>
-    <AssemblyName>SMPTPSupport</AssemblyName>
+    <AssemblyName>SMTPSupport</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
