add help and mail to commands

--- a/SMTPSupport/SMTPSupport.csproj
+++ b/SMTPSupport/SMTPSupport.csproj
@@ -39,6 +39,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="HELPCommand.cs" />
+    <Compile Include="HELPCommandToExecute.cs" />
+    <Compile Include="MAILCommand.cs" />
+    <Compile Include="MAILCommandToExecute.cs" />
     <Compile Include="EHLOCommand.cs" />
     <Compile Include="EHLOCommandToExecute.cs" />
     <Compile Include="RCPTCommandToExecute.cs" />
