--- a/FakeSmtp/App.config
+++ b/FakeSmtp/App.config
@@ -3,7 +3,7 @@
   <appSettings>
     <add key="hostAdressReception" value="127.0.0.1"/>
     <add key="receptionPort" value="25"/>
-    <add key="hostAdressDestination" value="smtp.gmail.com"/>
+    <add key="hostAdressDestination" value="10.8.111.251"/>
     <add key="destinationPort" value="25"/>
   </appSettings>
 <startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5"/></startup></configuration>
