--- a/FakeSmtp/FakeSmtp.csproj
+++ b/FakeSmtp/FakeSmtp.csproj
@@ -52,6 +52,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="IMetaCommandAPI.cs" />
     <Compile Include="ProtocolHandler.cs" />
     <Compile Include="MailTransfer.cs" />
     <Compile Include="Program.cs" />
