--- a/FakeSmtp/FakeSmtp.csproj
+++ b/FakeSmtp/FakeSmtp.csproj
@@ -53,6 +53,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="IMetaCommandAPI.cs" />
+    <Compile Include="MetaCommandAPI.cs" />
     <Compile Include="ProtocolHandler.cs" />
     <Compile Include="MailTransfer.cs" />
     <Compile Include="Program.cs" />
