--- a/FakeSmtp/App.config
+++ b/FakeSmtp/App.config
@@ -6,4 +6,7 @@
     <add key="hostAdressDestination" value="10.8.111.251"/>
     <add key="destinationPort" value="25"/>
   </appSettings>
-<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5"/></startup></configuration>
+<startup>
+  <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5"/>
+</startup>
+</configuration>
