--- a/SMTPSupport/SMTPSupport.csproj
+++ b/SMTPSupport/SMTPSupport.csproj
@@ -41,6 +41,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="MetaGETACommand.cs" />
+    <Compile Include="MetaGETACommandToExecute.cs" />
+    <Compile Include="IMetaCommandAPI.cs" />
     <Compile Include="MetaRMVAddressCommand.cs" />
     <Compile Include="MetaRMVAddressCommandToExecute.cs" />
     <Compile Include="MetaADDAddressCommand.cs" />
