--- a/ClientWindow/ClientWindow.csproj
+++ b/ClientWindow/ClientWindow.csproj
@@ -50,6 +50,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DelBlackAdrCommand.cs" />
     <Compile Include="DelAdrCommand.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
