--- a/FakeSmtp/App.config
+++ b/FakeSmtp/App.config
@@ -5,5 +5,6 @@
     <add key="receptionPort" value="25"/>
     <add key="hostAdressDestination" value="10.8.111.251"/>
     <add key="destinationPort" value="25"/>
+    <add key="dataDirectory" value="C:\Users\martin\Documents\INTECH\semestre 3\test spam"/>
   </appSettings>
 <startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5"/></startup></configuration>
