blackemail adress avec un bool pour fuck

--- a/DataSuport/DataSupport.csproj
+++ b/DataSuport/DataSupport.csproj
@@ -41,6 +41,7 @@
   <ItemGroup>
     <Compile Include="Address.cs" />
     <Compile Include="Blacklist.cs" />
+    <Compile Include="BlackEmailAddress.cs" />
     <Compile Include="EmailAddress.cs" />
     <Compile Include="Description.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
