--- a/ClientWindow/ClientWindow.csproj
+++ b/ClientWindow/ClientWindow.csproj
@@ -94,6 +94,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
@@ -114,6 +115,24 @@
       <Project>{f24637b0-493e-4903-817b-2f3886333767}</Project>
       <Name>DataSuport</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\medium_doigt_d_honneur.gif" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\medium_doigt_d_honneur outon.gif" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\no doigt_d_honneur outon.gif" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\poubelle bouton.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\poubelle bouton1.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\poubelle bouton2.jpg" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\nuget.targets" />
