--- a/ClientWindow/ClientWindow.csproj
+++ b/ClientWindow/ClientWindow.csproj
@@ -111,12 +111,6 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\DataSuport\DataSuport.csproj">
-      <Project>{f24637b0-493e-4903-817b-2f3886333767}</Project>
-      <Name>DataSuport</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
     <None Include="Resources\medium_doigt_d_honneur.gif" />
   </ItemGroup>
   <ItemGroup>
@@ -133,6 +127,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\poubelle bouton2.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\DataSuport\DataSupport.csproj">
+      <Project>{f24637b0-493e-4903-817b-2f3886333767}</Project>
+      <Name>DataSupport</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\nuget.targets" />
