--- a/ClientWindow/ClientWindow.csproj
+++ b/ClientWindow/ClientWindow.csproj
@@ -108,9 +108,12 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\DataSuport\DataSuport.csproj">
+    <WCFMetadata Include="Service References\" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\DataSuport\DataSupport.csproj">
       <Project>{f24637b0-493e-4903-817b-2f3886333767}</Project>
-      <Name>DataSuport</Name>
+      <Name>DataSupport</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
