--- a/DataSuport/DataSupport.csproj
+++ b/DataSuport/DataSupport.csproj
@@ -42,11 +42,9 @@
     <Compile Include="Address.cs" />
     <Compile Include="Blacklist.cs" />
     <Compile Include="BlackEmailAddress.cs" />
-    <Compile Include="EmailAddress.cs" />
-    <Compile Include="Description.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RelayAdress.cs" />
     <Compile Include="User.cs" />
+    <Compile Include="UserReadInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
