--- a/FakeSmtp/App.config
+++ b/FakeSmtp/App.config
@@ -5,7 +5,7 @@
     <add key="receptionPort" value="85"/>
     <add key="hostAdressDestination" value="10.8.111.251"/>
     <add key="destinationPort" value="25"/>
-    <add key="dataDirectory" value="C:\Users\martin\Documents\INTECH\semestre 3\test spam"/>
+    <add key="dataDirectory" value="C:\Users\Admin\Semestre 3\spamkiller\test"/>
   </appSettings>
 <startup>
   <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5"/>
