--- a/FakeSmtp/App.config
+++ b/FakeSmtp/App.config
@@ -5,7 +5,7 @@
     <add key="receptionPort" value="85"/>
     <add key="hostAdressDestination" value="127.0.0.1"/>
     <add key="destinationPort" value="25"/>
-    <add key="dataDirectory" value="C:\Users\Admin\Semestre 3\spamkiller\test"/>
+    <add key="dataDirectory" value="C:\Users\Yopif\Travail\PI"/>
   </appSettings>
 <startup>
   <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5"/>
